--- a/untitled.html
+++ b/untitled.html
@@ -5,8 +5,8 @@
 	<title>About T'keya!</title>
 </head>
 <body>
-	<h3>About T'keya</h3>
-	<p>My name in T’keya Davy <i>(tuh-key-ah)</i> and I am a senior studying Communication Design and Digital Art at Elon University. I am originally from New Jersey and currently reside in Cary, NC. I am a non-traditional student because I transferred in after obtaining my Associate in Arts from Wake Technical Community College in Raleigh, NC. I am interested in becoming a UX/UI Designer but also have interests in motion graphics and interactive media. I would like to eventually make interactive material for educational and training purposes one day. 
+	<h2>About T'keya</h2>
+	<p>My name in <b>T’keya Davy</b> <i>(tuh-key-ah)</i> and I am a senior studying Communication Design and Digital Art at Elon University. I am originally from New Jersey and currently reside in Cary, NC. I am a non-traditional student because I transferred in after obtaining my Associate in Arts from Wake Technical Community College in Raleigh, NC. I am interested in becoming a UX/UI Designer but mainly have interests in motion graphics and interactive media. I would like to eventually make interactive material for educational and training purposes one day. 
 		<br>
 		<br>
 	I enjoy doing art in my spare time and incorporating artistic visuals in my media designs as well. I currently work as a metalsmith and am in the process of starting my own company, called <b>Enigma Wireworks</b>, where I make handmade, unique jewelry pieces. My primary job is as a sales and reservations agent for an airline, which I do part-time from home. Apart from working, being in school and doing art, I enjoy spending time with my dog Bailey, going to the beach, and traveling to experience new cultures and foods! </p>
@@ -26,24 +26,20 @@
 
 	<h4>Things I Like</h4>
 	<ol>
-	<li>Traveling</li>
-	<li>Eating (I love food)</li>	
+	<li>Traveling <i>(anywhere there's a beach)</i></li>
+	<li>Eating <i>(I love food)</i></li>	
 	<li>Art!</li>
 	<li>Sleeping</li>
 	<li>Documentaries</li>
 	</ol>
-	<img src="https://media1.fdncms.com/metrotimes/imager/u/original/3031092/jamaican_5.jpg" title="Carib Food">
+	<img src="https://media1.fdncms.com/metrotimes/imager/u/original/3031092/jamaican_5.jpg" title="Carib Food" width="1000" height="auto">
 
 	<h4>Things I <i>DON'T</i> Like</h4>
 	<ul>
 	<li>Prolonged Social Interaction</li>	
 	<li>Okra</li>
-	<li>Extreme Heat OR Extreme Cold</li>
+	<li>Extreme Heat <i>OR</i> Extreme Cold</li>
 	</ul>
-
-
-
-
 	
 
 </body>
